--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "user": "node src/usersmgr.js"
   },
   "author": "Steffen Schön",
   "license": "MIT",
@@ -23,6 +24,7 @@
     "restify": "^8.5.1",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
-    "restify-jwt-community": "^1.1.7"
+    "restify-jwt-community": "^1.1.7",
+    "yargs": "^16.2.0"
   }
 }
